--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@ body{
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     height: 100vh;
+    background-color: rgb(121, 64, 64);
 }
 table{
     text-align: center;
     font-weight: 500;
-    
 }
 th{
     background-color: rgb(97, 88, 88);
