--- a/style.css
+++ b/style.css
@@ -4,19 +4,20 @@ body{
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     height: 100vh;
-    background-color: rgb(121, 64, 64);
+    background-color: rgb(24, 17, 17);
 }
 table{
     text-align: center;
     font-weight: 500;
+    color: wheat;
 }
 th{
-    background-color: rgb(97, 88, 88);
+    background-color: rgb(2, 81, 83);
     padding: 15px;
     border-radius: 7px;
 }
 td{
-    background-color: rgb(187, 155, 155);
+    background-color: rgb(50, 31, 53);
     padding: 15px;
     border-radius: 7px;
 }
@@ -36,7 +37,7 @@ td{
 /* styling the properties of tasksFinishedPrecent */
 
 .low-precent{
-    background-color: rgb(154, 195, 207);
+    background-color: rgb(108, 150, 163);
 }
 .avg-precent{
     background-color: rgb(87, 87, 190);
